# hf_agents

./: .gitignore  .gitmodules  README.md  db.py  ollama  ollama_model  ollama_serve  pyproject.toml  report.md  setup_env
doc_gen/src/doc_gen/: main.py
doc_gen/src/doc_gen/config/: agents.yaml
script/: .chat_ui.env  ollama_model  ollama_serve  run_vllm  update_tmux_env
src/doc_gen/: crew.py  main.py
src/doc_gen/config/: agents.yaml  tasks.yaml
src/doc_gen/tools/: custom_tool.py  tool_data.py
src/hf_model/: get_model_from_hub.py  gguf_convert.py  push_model_to_hub.py  vllm_test.py
src/serve/: middleware.py  vllm_client.py  vllm_serve.py
test/: test.py  vllm_llm.py
