[tool.poetry]
name = "doc_gen"
version = "0.1.0"
description = "doc_gen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
crewai = { version = ">=0.105.0", extras = ["tools"] }
annotated-types = { version = ">=0.7.0" }
# unsloth = { extras = ["cu121-torch240"], git = "https://github.com/unslothai/unsloth.git" }
transformers = { git = "https://github.com/huggingface/transformers.git" }
deepsearcher = { git = "https://github.com/zilliztech/deep-searcher.git" }
openmanus = { git = "https://github.com/ppijbb/OpenManus.git", branch="main" }
arxiv = { version = ">=2.1.3" }
duckduckgo-search = { version = ">=6.2.13" }
PyMuPDF = { version = ">=1.24.11" }
xmltodict = { version = ">=0.13.0" }
langchain = { version = ">0.3.0" }
langchain-community = { version = ">0.3.0" }
langchain-core = { version = ">0.3.0" }
langchain-openai = { version = ">0.3.0" }
langchain-experimental = { version = ">0.3.0" }
langchain-cli = { version = ">=0.0.31" }
langserve = { version = ">0.3.0", extras = ["all"] }
langgraph = { version = ">=0.2.34" }
langsmith = { version = ">=0.1.131" }
vllm = { version = ">=0.7.3" }
litellm = { version = "^1.60.2" }
torch = { version = "^2.5.1+cu121", source = "torch" }
torchvision = { version = "^0.20.1+cu121", source = "torch" }
torchaudio = { version = "^2.5.1+cu121", source = "torch" }
ray = { extras = ["serve"], version = "^2.37.0" }
intake = "^2.0.7"
msgpack = "^1.0.7"
asgi-lifespan = "^2.1.0"
memO = { version = ">=0.1.76" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.5cxx11abiFALSE-cp312-cp312-linux_x86_64.whl" }
flashinfer = { version = "^0.1.6", source = "flashinfer" }
modelscope = "^1.19.2"
# smolagents = { version = ">1.10.0" }
pymongo = "^4.11.2"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[[tool.poetry.source]]
name = "flashinfer"
url = "https://flashinfer.ai/whl/cu121/torch2.5/"
priority = "explicit"

[tool.poetry.scripts]
doc_gen = "src.doc_gen.main:run"
run_crew = "src.doc_gen.main:run"
train = "src.doc_gen.main:train"
replay = "src.doc_gen.main:replay"
test = "src.doc_gen.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
